font changes and a few other features

--- a/static-job-listings-master/index.html
+++ b/static-job-listings-master/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Static Job Listing</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@500&family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
@@ -36,6 +37,8 @@
           </ul>
         </div>
       </div>
+
+      <hr>
       <div class="col-3"></div>
       <div class="col-4">
         <p class="role"></p>
@@ -63,6 +66,7 @@
           </ul>
         </div>
       </div>
+      <hr>
       <div class="col-3"></div>
       <div class="col-4" id="col-4">
         <p class="role"></p>
@@ -90,6 +94,7 @@
           </ul>
         </div>
       </div>
+      <hr>
       <div class="col-3"></div>
       <div class="col-4">
         <p class="role"></p>
@@ -117,6 +122,7 @@
           </ul>
         </div>
       </div>
+      <hr>
       <div class="col-3"></div>
       <div class="col-4">
         <p class="role"></p>
@@ -144,6 +150,7 @@
           </ul>
         </div>
       </div>
+      <hr>
       <div class="col-3"></div>
       <div class="col-4">
         <p class="role"></p>
@@ -171,6 +178,7 @@
           </ul>
         </div>
       </div>
+      <hr>
       <div class="col-3"></div>
       <div class="col-4">
         <p class="role"></p>
@@ -198,6 +206,7 @@
           </ul>
         </div>
       </div>
+      <hr>
       <div class="col-3"></div>
       <div class="col-4">
         <p class="role"></p>
@@ -225,6 +234,7 @@
           </ul>
         </div>
       </div>
+      <hr>
       <div class="col-3"></div>
       <div class="col-4">
         <p class="role"></p>
@@ -252,6 +262,7 @@
           </ul>
         </div>
       </div>
+      <hr>
       <div class="col-3"></div>
       <div class="col-4">
         <p class="role"></p>
@@ -279,6 +290,7 @@
           </ul>
         </div>
       </div>
+      <hr>
       <div class="col-3"></div>
       <div class="col-4">
         <p class="role"></p>
@@ -295,8 +307,8 @@
 </div>
 <span id="clear">Clear</span>
 
-<span id="cancel">
-  <i class="fa-solid fa-xmark"></i>
-</span>
+<div id="cancel">
+  <i class="fa-regular fa-xmark"></i>
+</div>
 </body>
 </html>
